build self-contained, refactor miride